--- a/grafana.yml
+++ b/grafana.yml
@@ -13,7 +13,7 @@ services:
       context: ./prometheus
     image: prometheus:local
     user: root
-    pull_policy: build
+    pull_policy: never
     volumes:
       - prom-data:/prometheus
       - /etc/localtime:/etc/localtime:ro
@@ -37,7 +37,7 @@ services:
     build:
       context: ./eth-metrics
     image: ethereum-metrics-exporter:local
-    pull_policy: build
+    pull_policy: never
     environment:
       - CLIENT=${COMPOSE_FILE}
     entrypoint:
@@ -161,7 +161,7 @@ services:
     build:
       context: ./grafana
     image: grafana:local
-    pull_policy: build
+    pull_policy: never
     user: grafana
     environment:
       - GF_SERVER_HTTP_PORT=${GRAFANA_PORT}
