--- a/lodestar.yml
+++ b/lodestar.yml
@@ -21,7 +21,7 @@ services:
     build:
       <<: *ls-build
     image: lodestar:local
-    pull_policy: build
+    pull_policy: never
     user: lsconsensus
     stop_grace_period: 1m
     volumes:
@@ -93,7 +93,7 @@ services:
     build:
       <<: *ls-build
     image: lodestar:local
-    pull_policy: build
+    pull_policy: never
     user: lsvalidator
     environment:
       - MEV_BOOST=${MEV_BOOST}
@@ -152,7 +152,7 @@ services:
     build:
       <<: *ls-build
     image: lodestar:local
-    pull_policy: build
+    pull_policy: never
     user: lsvalidator
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
@@ -178,7 +178,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
-    pull_policy: build
+    pull_policy: never
     user: root
     volumes:
       - lsvalidator-data:/var/lib/lodestar/validators
