--- a/nimbus-vc-only.yml
+++ b/nimbus-vc-only.yml
@@ -24,7 +24,7 @@ services:
       target: validator
       <<: *nimbus-build
     image: nimbus-validator:local
-    pull_policy: build
+    pull_policy: never
     user: user
     volumes:
       - nimbus-vc-data:/var/lib/nimbus
@@ -79,7 +79,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
-    pull_policy: build
+    pull_policy: never
     user: root
     volumes:
       - nimbus-vc-data:/var/lib/nimbus
