--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -24,7 +24,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
-    pull_policy: build
+    pull_policy: never
     user: prysmvalidator
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -88,7 +88,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
-    pull_policy: build
+    pull_policy: never
     user: prysmvalidator
     environment:
       - NETWORK=${NETWORK}
@@ -121,7 +121,7 @@ services:
       target: validator
       <<: *prysm-build
     image: prysm-validator:local
-    pull_policy: build
+    pull_policy: never
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
@@ -147,7 +147,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
-    pull_policy: build
+    pull_policy: never
     user: root
     volumes:
       - prysmvalidator-data:/var/lib/prysm
