--- a/teku-allin1.yml
+++ b/teku-allin1.yml
@@ -22,7 +22,7 @@ services:
     build:
       <<: *teku-build
     image: teku:local
-    pull_policy: build
+    pull_policy: never
     user: teku
     stop_grace_period: 1m
     volumes:
@@ -111,7 +111,7 @@ services:
     build:
       <<: *teku-build
     image: teku:local
-    pull_policy: build
+    pull_policy: never
     user: teku
     volumes:
       - teku-data:/var/lib/teku
@@ -130,7 +130,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
-    pull_policy: build
+    pull_policy: never
     user: root
     volumes:
       - teku-data:/var/lib/teku
