--- a/teku.yml
+++ b/teku.yml
@@ -21,7 +21,7 @@ services:
     build:
       <<: *teku-build
     image: teku:local
-    pull_policy: build
+    pull_policy: never
     user: teku
     stop_grace_period: 1m
     volumes:
@@ -88,7 +88,7 @@ services:
     build:
       <<: *teku-build
     image: teku:local
-    pull_policy: build
+    pull_policy: never
     user: teku
     volumes:
       - teku-vc-data:/var/lib/teku
@@ -141,7 +141,7 @@ services:
     build:
       <<: *teku-build
     image: teku:local
-    pull_policy: build
+    pull_policy: never
     user: teku
     volumes:
       - teku-vc-data:/var/lib/teku
@@ -159,7 +159,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
-    pull_policy: build
+    pull_policy: never
     user: root
     volumes:
       - teku-vc-data:/var/lib/teku
