--- a/deposit-cli.yml
+++ b/deposit-cli.yml
@@ -8,7 +8,7 @@ services:
         - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET:-'$(git describe --tags $(git rev-list --tags --max-count=1))'}
         - SRC_REPO=${DEPCLI_SRC_REPO:-https://github.com/ethereum/staking-deposit-cli}
     image: staking-deposit-cli:local
-    pull_policy: build
+    pull_policy: never
     volumes:
       - ./.eth:/app/.eth/
     entrypoint:
@@ -27,7 +27,7 @@ services:
         - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET:-'$(git describe --tags $(git rev-list --tags --max-count=1))'}
         - SRC_REPO=${DEPCLI_SRC_REPO:-https://github.com/ethereum/staking-deposit-cli}
     image: staking-deposit-cli:local
-    pull_policy: build
+    pull_policy: never
     volumes:
       - ./.eth:/app/.eth/
     entrypoint:
@@ -46,7 +46,7 @@ services:
         - SRC_REPO=${DEPCLI_SRC_REPO:-https://github.com/ethereum/staking-deposit-cli}
     restart: "no"
     image: staking-deposit-cli:local
-    pull_policy: build
+    pull_policy: never
     volumes:
       - ./.eth:/app/.eth
     entrypoint:
