--- a/lighthouse.yml
+++ b/lighthouse.yml
@@ -22,7 +22,7 @@ services:
     build:
       <<: *lh-build
     image: lighthouse:local
-    pull_policy: build
+    pull_policy: never
     user: lhconsensus
     stop_grace_period: 1m
     volumes:
@@ -96,7 +96,7 @@ services:
     build:
       <<: *lh-build
     image: lighthouse:local
-    pull_policy: build
+    pull_policy: never
     user: lhvalidator
     environment:
       - MEV_BOOST=${MEV_BOOST}
@@ -161,7 +161,7 @@ services:
     build:
       <<: *lh-build
     image: lighthouse:local
-    pull_policy: build
+    pull_policy: never
     # Keys have 440 permissions. Root copies and chowns them,
     # then switches to user lhvalidator
     user: root
@@ -192,7 +192,7 @@ services:
     build:
       context: ./vc-utils
     image: vc-utils:local
-    pull_policy: build
+    pull_policy: never
     # The API token has 640 permissions. Root copies it,
     # then switches to the local user's UID or if not provided,
     # 1000. The UID has to be able to write .eth/validator_keys
