--- a/web3signer.yml
+++ b/web3signer.yml
@@ -16,7 +16,7 @@ services:
         - DOCKER_REPO=${W3S_DOCKER_REPO:-consensys/web3signer}
       dockerfile: Dockerfile.binary
     image: web3signer:local
-    pull_policy: build
+    pull_policy: never
     user: web3signer
     volumes:
       - web3signer-keys:/var/lib/web3signer
