feat: add ssv-dkg for Lido integration

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ ssv-config/password.pass
 ssv-config/password
 ssv-config/encrypted_private_key.json
 ssv-config/config.yaml
+ssv-config/operator.yaml
 .nada
