fix: jq for obol

--- a/lido-obol.yml
+++ b/lido-obol.yml
@@ -51,6 +51,14 @@ services:
     volumes:
       - .eth:/opt/charon/.charon
     command: dkg
+  curl-jq:
+    image: curl-jq:local
+    pull_policy: build
+    build:
+      context: ./traefik
+      dockerfile: Dockerfile.jq
+    restart: "no"
+    profiles: [ "tools" ]
 
   validator-ejector:
    platform: linux/amd64
