feat: add `--distributed` for prysm and lodestar

--- a/default.env
+++ b/default.env
@@ -193,6 +193,7 @@ VE_OPERATOR_ID=
 VE_STAKING_MODULE_ID=
 VE_LOCATOR_ADDRESS=
 VE_ORACLE_ADDRESSES_ALLOWLIST=
+ENABLE_DIST_ATTESTATION_AGGR=
 
 # MEV-Boost
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
