--- a/reth.yml
+++ b/reth.yml
@@ -33,7 +33,7 @@ services:
       - RUST_LOG_STYLE=never
     volumes:
       - reth-el-data:/var/lib/reth
-      - ${ANCIENT_DIR:-.nada}:/var/lib/ancient
+      - ${ANCIENT_DIR:-.nada}:/var/lib/static
       - /etc/localtime:/etc/localtime:ro
       - jwtsecret:/var/lib/reth/ee-secret
     ports:
