fix: add `--publish` flag to dkg

--- a/lido-obol.yml
+++ b/lido-obol.yml
@@ -50,7 +50,7 @@ services:
     image: obolnetwork/charon:${CHARON_VERSION:-latest}
     volumes:
       - .eth:/opt/charon/.charon
-    command: dkg
+    command: dkg --publish
   curl-jq:
     image: curl-jq:local
     pull_policy: build
