feat: add LIDO_DV_EXIT_EXIT_EPOCH

--- a/default.env
+++ b/default.env
@@ -194,6 +194,7 @@ VE_STAKING_MODULE_ID=
 VE_LOCATOR_ADDRESS=
 VE_ORACLE_ADDRESSES_ALLOWLIST=
 ENABLE_DIST_ATTESTATION_AGGR=
+LIDO_DV_EXIT_EXIT_EPOCH=
 
 # MEV-Boost
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
