--- a/ssv-dkg.yml
+++ b/ssv-dkg.yml
@@ -8,6 +8,15 @@ x-logging: &logging
       tag: '{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}'
 
 services:
+  curl-jq:
+    image: curl-jq:local
+    pull_policy: build
+    build:
+      context: ./traefik
+      dockerfile: Dockerfile.jq
+    restart: "no"
+    profiles: [ "tools" ]
+
   ssv-dkg-operator:
     restart: "unless-stopped"
     image: bloxstaking/ssv-dkg:${SSV_DKG_TAG:-latest}
