--- a/lido-deposit-cli.yml
+++ b/lido-deposit-cli.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   deposit-cli-new:
     profiles: ["tools"]
@@ -9,6 +8,7 @@ services:
         - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET:-'$(git describe --tags $(git rev-list --tags --max-count=1))'}
         - SRC_REPO=${DEPCLI_SRC_REPO:-https://github.com/ethereum/staking-deposit-cli}
     image: staking-deposit-cli:local
+    pull_policy: never
     volumes:
       - ./.eth:/app/.eth/
     entrypoint:
@@ -38,6 +38,7 @@ services:
         - BUILD_TARGET=${DEPCLI_SRC_BUILD_TARGET:-'$(git describe --tags $(git rev-list --tags --max-count=1))'}
         - SRC_REPO=${DEPCLI_SRC_REPO:-https://github.com/ethereum/staking-deposit-cli}
     image: staking-deposit-cli:local
+    pull_policy: never
     volumes:
       - ./.eth:/app/.eth/
     entrypoint:
@@ -56,6 +57,7 @@ services:
         - SRC_REPO=${DEPCLI_SRC_REPO:-https://github.com/ethereum/staking-deposit-cli}
     restart: "no"
     image: staking-deposit-cli:local
+    pull_policy: never
     volumes:
       - ./.eth:/app/.eth
     entrypoint:
@@ -65,3 +67,7 @@ services:
       - generate-bls-to-execution-change
       - --chain
       - ${NETWORK}
+
+networks:
+  default:
+    enable_ipv6: ${IPV6:-false}
