--- a/ssv-dkg.yml
+++ b/ssv-dkg.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 x-logging: &logging
   logging:
     driver: json-file
@@ -27,3 +26,7 @@ services:
     volumes:
       - ./ssv-config/:/config
       - ./ssv-config/dkg-output:/output
+
+networks:
+  default:
+    enable_ipv6: ${IPV6:-false}
