--- a/loki/loki.yml
+++ b/loki/loki.yml
@@ -17,12 +17,12 @@ common:
       store: inmemory
 
 compactor:
-  working_directory: /tmp/loki/boltdb-shipper-compactor
-  shared_store: filesystem
+  working_directory: /tmp/loki/retention
   compaction_interval: 10m
   retention_enabled: true
   retention_delete_delay: 2h
   retention_delete_worker_count: 150
+  delete_request_store: filesystem
 
 schema_config:
   configs:
