use GCP for web3signer

--- a/web3signer.yml
+++ b/web3signer.yml
@@ -28,13 +28,14 @@ services:
     entrypoint:
       - docker-entrypoint.sh
       - /opt/web3signer/bin/web3signer
-      - --key-store-path=/var/lib/web3signer/keys
       - --metrics-enabled
       - --metrics-host-allowlist=*
       - --http-host-allowlist=*
       - eth2
       - --network=${NETWORK}
-      - --enable-key-manager-api=true
+      - --gcp-secrets-enabled=true
+      - --gcp-project-id=${NETWORK}
+      - --gcp-secrets-filter="labels.type=${VALIDATOR_KEY_LABEL}"
       - --slashing-protection-db-url=jdbc:postgresql://postgres/web3signer
       - --slashing-protection-db-username=postgres
       - --slashing-protection-db-password=postgres
