--- a/default.env
+++ b/default.env
@@ -298,3 +298,5 @@ NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
 ENV_VERSION=9
+
+VALIDATOR_KEY_LABEL=bls
