--- a/grafana-rootless.yml
+++ b/grafana-rootless.yml
@@ -38,7 +38,7 @@ services:
     entrypoint:
       - /ethereum-metrics-exporter
       - --consensus-url=${CL_NODE}
-      - --execution-url=${EL_NODE}
+      - --execution-url=http://execution:${EL_RPC_PORT:-8545}
     <<: *logging
 
   blackbox-exporter:
