--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ ext-network.yml.bak
 !.eth/README.md
 !.eth/validator_keys/.empty
 !.eth/exit_messages/.empty
+!.eth/dkg_output/.empty
 !.eth/ethdo/README.md
 !.eth/ethdo/create-withdrawal-change.sh
 *.swp
@@ -19,4 +20,5 @@ ssv-config/password.pass
 ssv-config/password
 ssv-config/encrypted_private_key.json
 ssv-config/config.yaml
+ssv-config/dkg-config.yaml
 .nada
