--- a/default.env
+++ b/default.env
@@ -111,6 +111,8 @@ ERIGON_P2P_PORT_3=30305
 # SSV Node ports
 SSV_P2P_PORT=13001
 SSV_P2P_PORT_UDP=12001
+# SSV DKG port
+SSV_DKG_PORT=3030
 # Engine port. Only for distributed setups, this should otherwise be left alone
 EE_PORT=8551
 # Consensus layer REST port. Only for distributed setups, this should otherwise be left alone
@@ -168,6 +170,7 @@ ETH_DOCKER_TAG=
 
 # SSV
 SSV_NODE_TAG=latest
+SSV_DKG_TAG=latest
 
 # MEV-Boost
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
@@ -305,4 +308,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=10
+ENV_VERSION=11
