--- a/geth/Dockerfile.binary
+++ b/geth/Dockerfile.binary
@@ -27,6 +27,8 @@ RUN adduser \
     --ingroup "${USER}" \
     "${USER}"
 
+# Create mount point for old volume
+RUN mkdir -p /var/lib/goethereum-og && chown -R ${USER}:${USER} /var/lib/goethereum-og
 RUN mkdir -p /var/lib/goethereum/ee-secret && chown -R ${USER}:${USER} /var/lib/goethereum && chmod -R 700 /var/lib/goethereum && chmod 777 /var/lib/goethereum/ee-secret
 
 # Cannot assume buildkit, hence no chmod
