--- a/nethermind/Dockerfile.source
+++ b/nethermind/Dockerfile.source
@@ -49,6 +49,8 @@ WORKDIR /nethermind
 COPY --from=build --chown=${USER}:${USER} /nethermind/out .
 
 RUN chown -R ${USER}:${USER} /nethermind
+# Create mount point for old volume
+RUN mkdir -p /var/lib/nethermind-og && chown -R ${USER}:${USER} /var/lib/nethermind-og
 RUN mkdir -p /var/lib/nethermind/ee-secret && chown -R ${USER}:${USER} /var/lib/nethermind \
 && chmod -R 700 /var/lib/nethermind && chmod 777 /var/lib/nethermind/ee-secret
 
