Migrate to new volume names

--- a/lighthouse/Dockerfile.binary
+++ b/lighthouse/Dockerfile.binary
@@ -20,6 +20,8 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
+# Create mount point for old volume
+RUN mkdir -p /var/lib/lighthouse-og && chown -R ${USER}:${USER} /var/lib/lighthouse-og
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/lighthouse/beacon/ee-secret && chown -R ${USER}:${USER} /var/lib/lighthouse/beacon && chmod -R 700 /var/lib/lighthouse/beacon && chmod 777 /var/lib/lighthouse/beacon/ee-secret
 # Cannot assume buildkit, hence no chmod
@@ -49,6 +51,8 @@ RUN set -eux; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
+# rsync for migration
+RUN apt-get update && apt-get install -y --no-install-recommends rsync
 
 # Cannot assume buildkit, hence no chmod
 COPY --chown=${USER}:${USER} ./validator-exit.sh /usr/local/bin/
