--- a/lighthouse/Dockerfile.source
+++ b/lighthouse/Dockerfile.source
@@ -33,6 +33,8 @@ RUN apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install 
   wget \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
+# rsync for migration
+RUN apt-get update && apt-get install -y --no-install-recommends rsync
 
 ARG USER=lhconsensus
 ARG UID=10002
@@ -47,6 +49,8 @@ RUN adduser \
     --uid "${UID}" \
     "${USER}"
 
+# Create mount point for old volume
+RUN mkdir -p /var/lib/lighthouse-og && chown -R ${USER}:${USER} /var/lib/lighthouse-og
 # Create data mount point with permissions
 RUN mkdir -p /var/lib/lighthouse/beacon/ee-secret && chown -R ${USER}:${USER} /var/lib/lighthouse/beacon && chmod -R 700 /var/lib/lighthouse/beacon && chmod 777 /var/lib/lighthouse/beacon/ee-secret
 # Cannot assume buildkit, hence no chmod
