--- a/nethermind.yml
+++ b/nethermind.yml
@@ -29,8 +29,7 @@ services:
       - AUTOPRUNE_NM=${AUTOPRUNE_NM:-true}
       - NETWORK=${NETWORK}
     volumes:
-      - nm-eth1-data:/var/lib/nethermind-og
-      - nethermind-el-data:/var/lib/nethermind
+      - nm-eth1-data:/var/lib/nethermind
       - /etc/localtime:/etc/localtime:ro
       - jwtsecret:/var/lib/nethermind/ee-secret
     ports:
@@ -93,7 +92,6 @@ services:
 
 volumes:
   nm-eth1-data:
-  nethermind-el-data:
   jwtsecret:
 
 networks:
