Enable separate Reth static dir

--- a/default.env
+++ b/default.env
@@ -30,7 +30,7 @@ WEB3SIGNER=false
 # Whether to explicitly enable IPv6 P2P. See https://ethdocker.com/Support/ipv6
 # Needs to be false or true for Eth Docker to work
 IPV6=false
-# Directory to keep ancient data. In use for Geth, optional.
+# Directory to keep ancient/static data. In use for Reth and Geth, optional.
 # If you use this, make sure to chown the directory to uid 10001
 ANCIENT_DIR=
 
