fix: `OBOL_NODE_TAG` -> `CHARON_VERSION`

--- a/default.env
+++ b/default.env
@@ -184,7 +184,7 @@ ETH_DOCKER_TAG=
 SSV_NODE_TAG=latest
 
 # Lido OBOL
-OBOL_NODE_TAG=latest
+CHARON_VERSION=latest
 VE_OPERATOR_ID=
 VE_STAKING_MODULE_ID=
 VE_LOCATOR_ADDRESS=
