--- a/default.env
+++ b/default.env
@@ -202,8 +202,7 @@ TEKU_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 LH_SRC_BUILD_TARGET=stable
 LH_SRC_REPO=https://github.com/sigp/lighthouse
-# If Lighthouse terminates with a SIGILL, make this "latest"
-LH_DOCKER_TAG=latest-modern
+LH_DOCKER_TAG=latest
 LH_DOCKER_REPO=sigp/lighthouse
 LH_DOCKERFILE=Dockerfile.binary
 
@@ -256,7 +255,6 @@ BESU_DOCKERFILE=Dockerfile.binary
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 ERIGON_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 ERIGON_SRC_REPO=https://github.com/ledgerwatch/erigon
-#ERIGON_DOCKER_TAG=stable # stable tag was abandoned by Erigon team, set a tag manually
 ERIGON_DOCKER_TAG=v2.60.1
 ERIGON_DOCKER_REPO=thorax/erigon
 ERIGON_DOCKERFILE=Dockerfile.binary
@@ -308,4 +306,4 @@ DDNS_TAG=v2
 NODE_EXPORTER_IGNORE_MOUNT_REGEX='^/(dev|proc|sys|run|var/lib/docker/.+)($|/)'
 
 # Used by ethd update - please do not adjust
-ENV_VERSION=11
+ENV_VERSION=12
