--- a/reth.yml
+++ b/reth.yml
@@ -30,6 +30,7 @@ services:
       - NETWORK=${NETWORK}
       - STATIC_DIR=${ANCIENT_DIR}
       # Make this RUST_LOG=${LOG_LEVEL:-info},engine=trace when requiring deep debug
+      # RPC debug can be done with jsonrpsee=trace or jsonrpsee::target=trace for a specific target
       - RUST_LOG=${LOG_LEVEL:-info}
       - RUST_LOG_STYLE=never
     volumes:
