--- a/nimbus-el/Dockerfile.source
+++ b/nimbus-el/Dockerfile.source
@@ -8,7 +8,7 @@ ARG DOCKER_REPO
 ARG BUILD_TARGET
 ARG SRC_REPO
 
-RUN apt-get update && apt-get install -y build-essential git ca-certificates librocksdb-dev
+RUN apt-get update && apt-get install -y build-essential git ca-certificates librocksdb-dev curl
 
 WORKDIR /usr/src
 
