--- a/erigon.yml
+++ b/erigon.yml
@@ -101,6 +101,7 @@ services:
       - metrics.path=/debug/metrics/prometheus
       - metrics.port=6060
       - metrics.instance=execution
+      - metrics.network=${NETWORK}
 
 volumes:
   erigon-el-data:
