--- a/grafana-cloud.yml
+++ b/grafana-cloud.yml
@@ -39,6 +39,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9090
       - metrics.instance=prometheus
+      - metrics.network=${NETWORK}
 
   ethereum-metrics-exporter:
     restart: "unless-stopped"
@@ -77,6 +78,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9100
       - metrics.instance=node-exporter
+      - metrics.network=${NETWORK}
 
   blackbox-exporter:
     restart: "unless-stopped"
@@ -103,6 +105,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=7979
       - metrics.instance=json-exporter
+      - metrics.network=${NETWORK}
 
   cadvisor:
     restart: "unless-stopped"
@@ -122,6 +125,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8080
       - metrics.instance=cadvisor
+      - metrics.network=${NETWORK}
 
   promtail:
     image: grafana/promtail:latest
@@ -142,6 +146,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9080
       - metrics.instance=promtail
+      - metrics.network=${NETWORK}
 
 volumes:
   prom-data:
