--- a/grafana.yml
+++ b/grafana.yml
@@ -31,6 +31,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9090
       - metrics.instance=prometheus
+      - metrics.network=${NETWORK}
 
   ethereum-metrics-exporter:
     restart: "unless-stopped"
@@ -45,6 +46,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9090
       - metrics.instance=ethereum-metrics-exporter
+      - metrics.network=${NETWORK}
 
   node-exporter:
     image: prom/node-exporter:latest
@@ -69,6 +71,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9100
       - metrics.instance=node-exporter
+      - metrics.network=${NETWORK}
 
   blackbox-exporter:
     restart: "unless-stopped"
@@ -95,6 +98,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=7979
       - metrics.instance=json-exporter
+      - metrics.network=${NETWORK}
 
   cadvisor:
     restart: "unless-stopped"
@@ -114,6 +118,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8080
       - metrics.instance=cadvisor
+      - metrics.network=${NETWORK}
 
   promtail:
     image: grafana/promtail:latest
@@ -136,6 +141,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9080
       - metrics.instance=promtail
+      - metrics.network=${NETWORK}
 
   loki:
     image: grafana/loki:latest
@@ -151,6 +157,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=3100
       - metrics.instance=loki
+      - metrics.network=${NETWORK}
 
   grafana:
     restart: "unless-stopped"
@@ -179,6 +186,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=3000
       - metrics.instance=grafana
+      - metrics.network=${NETWORK}
 
 volumes:
   grafana-data:
