--- a/besu.yml
+++ b/besu.yml
@@ -79,6 +79,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=6060
       - metrics.instance=execution
+      - metrics.network=${NETWORK}
 
   set-prune-marker:
     profiles: ["tools"]
