--- a/geth.yml
+++ b/geth.yml
@@ -81,6 +81,7 @@ services:
       - metrics.path=/debug/metrics/prometheus
       - metrics.port=6060
       - metrics.instance=execution
+      - metrics.network=${NETWORK}
 
 volumes:
   geth-eth1-data:
