--- a/grandine-allin1.yml
+++ b/grandine-allin1.yml
@@ -105,6 +105,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8008
       - metrics.instance=consensus
+      - metrics.network=${NETWORK}
 
   wipe-db:
     profiles: ["tools"]
