--- a/grandine-cl-only.yml
+++ b/grandine-cl-only.yml
@@ -94,6 +94,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8008
       - metrics.instance=consensus
+      - metrics.network=${NETWORK}
 
   wipe-db:
     profiles: ["tools"]
