--- a/lighthouse.yml
+++ b/lighthouse.yml
@@ -91,6 +91,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8008
       - metrics.instance=consensus
+      - metrics.network=${NETWORK}
 
   validator:
     restart: "unless-stopped"
@@ -155,6 +156,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8009
       - metrics.instance=validator
+      - metrics.network=${NETWORK}
 
   validator-exit:
     profiles: ["tools"]
