--- a/lodestar-vc-only.yml
+++ b/lodestar-vc-only.yml
@@ -71,6 +71,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8009
       - metrics.instance=validator
+      - metrics.network=${NETWORK}
 
   validator-exit:
     profiles: ["tools"]
