--- a/nethermind.yml
+++ b/nethermind.yml
@@ -89,6 +89,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=6060
       - metrics.instance=execution
+      - metrics.network=${NETWORK}
 
 volumes:
   nm-eth1-data:
