--- a/nimbus-cl-only.yml
+++ b/nimbus-cl-only.yml
@@ -80,6 +80,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8008
       - metrics.instance=consensus
+      - metrics.network=${NETWORK}
 
 # Uses keystore-m file and CL, so does belong here
   validator-exit:
