--- a/nimbus-vc-only.yml
+++ b/nimbus-vc-only.yml
@@ -63,6 +63,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8009
       - metrics.instance=validator
+      - metrics.network=${NETWORK}
 
   validator-exit:
     profiles: ["tools"]
