--- a/prysm-vc-only.yml
+++ b/prysm-vc-only.yml
@@ -80,6 +80,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8009
       - metrics.instance=validator
+      - metrics.network=${NETWORK}
 
   create-wallet:
     profiles: ["tools"]
