--- a/teku-allin1.yml
+++ b/teku-allin1.yml
@@ -91,6 +91,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8008
       - metrics.instance=consensus
+      - metrics.network=${NETWORK}
 
   wipe-db:
     profiles: ["tools"]
