--- a/teku-cl-only.yml
+++ b/teku-cl-only.yml
@@ -82,6 +82,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8008
       - metrics.instance=consensus
+      - metrics.network=${NETWORK}
 
 volumes:
   tekuconsensus-data:
