--- a/traefik-aws.yml
+++ b/traefik-aws.yml
@@ -51,6 +51,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8080
       - metrics.instance=traefik
+      - metrics.network=${NETWORK}
     <<: *logging
 
 volumes:
