--- a/traefik-cf.yml
+++ b/traefik-cf.yml
@@ -45,6 +45,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=8080
       - metrics.instance=traefik
+      - metrics.network=${NETWORK}
     <<: *logging
 
   cf-ddns:
