--- a/web3signer.yml
+++ b/web3signer.yml
@@ -45,6 +45,7 @@ services:
       - metrics.path=/metrics
       - metrics.port=9001
       - metrics.instance=web3signer
+      - metrics.network=${NETWORK}
 
   postgres:
     restart: "unless-stopped"
