Add config to scrape network label to local prometheus

--- a/prometheus/base-config.yml
+++ b/prometheus/base-config.yml
@@ -58,6 +58,8 @@ scrape_configs:
           source_labels:
           - __meta_docker_container_label_metrics_instance
           target_label: instance
+        - source_labels: [__meta_docker_container_label_metrics_network]
+          target_label: network
 
 scrape_config_files:
   - /etc/prometheus/conf.d/*.yml
