--- a/erigon/Dockerfile.source
+++ b/erigon/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Erigon in a stock Go build container
-FROM golang:1.22-alpine as builder
+FROM golang:1.22-alpine AS builder
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
