--- a/reth/Dockerfile.source
+++ b/reth/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build reth in a stock rust container
-FROM rust:bookworm as builder
+FROM rust:bookworm AS builder
 
 # Unused, this is here to avoid build time complaints
 ARG DOCKER_TAG
