--- a/teku/Dockerfile.source
+++ b/teku/Dockerfile.source
@@ -1,5 +1,5 @@
 # Build Teku in a stock Ubuntu container
-FROM eclipse-temurin:21-jdk-jammy as builder
+FROM eclipse-temurin:21-jdk-jammy AS builder
 
 # This is here to avoid build-time complaints
 ARG DOCKER_TAG
